  server explorer nodes to not function
- Fixed web providers so that they don't attempt to check their schema or cache
  their application id if the connection string has not been set. (bug #34451)
- Fixed installer that did not install the DDEX provider binary if 
  the Visual Studio 2005 component was not selected. (bug #34674)

Version 5.2 - 2/11/2008
. Added ClearPool and ClearAllPools features
. DDEX provider now works under Visual Studio 2008	
. Added support for DbDataAdapter UpdateBatchSize.  Batching is fully supported
  including collapsing inserts down into the multi-value form if possible.
. Added MySqlScript class for executing scripts against a database.
. Marked connection string option 'Use Old Syntax' as obsolete and changed code to 
  allow both @ and ? as paramter markers.
. Finished MySqlBulkLoader class
. BINARY(16) columns are now returned as Guid objects
. Moved code that creates the PerfMon stuff from the assemblies to the Wix installer
. Added Allow User Variables connection string option so that users can use user variables
  without getting missing parameter exceptions
  
Version 5.1.6 
 - Fixed problem where parameters lists were not showing when you tried to alter a routine 
   in server explorer.  (bug #34359)
 - Fixed a problem in procedure cache where it was possible to get into a race condition
   and cause a memory leak (bug #34338)
 - Fixed problem where attempting to use an isolation level other than the default with
   a transaction scope would use the default instead (bug #34448)
   
Version 5.1.5 - 2/11/2008
  - Fixed problem with membership provider where FindUserByEmail would fail trying to add
    a second parameter with the same name as the first (bug #33347)
  - Fixed long standing problem with compression over a network.  It's now fast again. (bug #27865)    
  - Fixed nant compilation problem on mono (bug #33508)
  - Fixed problem where connection state reported through the state change handler was not